--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="home">
+        <div class="team-section" id="home-section">
             <h2>HOME</h2>
             <h1 id="home-counter">0</h1>
             <div class="btns">
@@ -31,7 +31,7 @@
         <div class="reset">
             <button id="new-game">New Game</button>
         </div>
-        <div class="guest">
+        <div class="team-section" id="guest-section">
             <h2>GUEST</h2>
             <h1 id="guest-counter">0</h1>
             <div class="btns">
